--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ packaging==23.1
 pluggy==1.2.0
 prompt-toolkit==3.0.39
 psycopg==3.1.9
+psycopg-binary==3.1.9
 PyJWT==2.7.0
 pytest==7.4.0
 pytest-django==4.5.2
